Add react app for quanly

--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,11 @@
 RewriteEngine On
-    # If an existing asset or directory is requested go to it as it is
-    RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI} -f [OR]
-    RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI} -d
-    RewriteRule ^ - [L]
-    # If the requested resource doesn't exist, use index.html
-RewriteRule ^quanly admin.html
+
+#for app in subdirectory /quanly/
+RewriteBase /quanly/
+RewriteRule ^index\.html$ - [L]
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} !-l
+RewriteRule ^.*quanly/.* /quanly/index.html [L]
+
 RewriteRule ^doichoi team.html
